@@ -35,49 +35,74 @@ buildscript {
         classpath "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
     }
 }
-plugins {
-    id 'java'
-    id 'maven-publish'
+
+plugins{
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+    id 'groovy'
 }
-version '1.0'
-ext {
-    //the build number that this mod is made for
-    //version of SDK you will be using
-    sdkVersion = '30'
-    sdkRoot = System.getenv("ANDROID_HOME")
-
-    doExec = { cmd ->
-        def proc = cmd.execute(null, new File("$buildDir/libs"))
-        proc.waitForProcessOutput(System.out, System.err)
-    }
-    arcModule = { String name ->
-        //skip to last submodule
-        if (name.contains(':')) name = name.split(':').last()
-        return "com.github.Anuken.Arc:$name:$arcHash"
-    }
-}
-dependencies {
-    compileClasspath fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'commons-io:commons-io:2.5'
-//    compile project(":core")
-//    implementation project(":core")
-    implementation arcModule('arc-core')
-    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    implementation "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
-    implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
-    implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-    implementation 'com.squareup:javapoet:1.12.1'
-
-}
-
-
 allprojects {
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8'])
+
+    apply plugin: 'maven-publish'
+    apply plugin: 'groovy'
+
+    ext{
+        arcModule = { String name ->
+            //skip to last submodule
+            if (name.contains(':')) name = name.split(':').last()
+            return "com.github.Anuken.Arc:$name:$arcHash"
+        }
+
+        generateLocales = {
+            if (true )return null;
+            def output = 'en\n'
+            def bundles = new File(project(':core').projectDir, 'assets/bundles/')
+            bundles.listFiles().each{ other ->
+                if(other.name == "bundle.properties") return
+                output += other.name.substring("bundle".length() + 1, other.name.lastIndexOf('.')) + "\n"
+            }
+            new File(project(':core').projectDir, 'assets/locales').text = output
+            new File(project(':core').projectDir, 'assets/basepartnames').text = new File(project(':core').projectDir, 'assets/baseparts/').list().join("\n")
+        }
+
+        writeVersion = {
+            if (true )return null;
+            def pfile = new File(project(':core').projectDir, 'assets/version.properties')
+            def props = new Properties()
+
+            try{
+                pfile.createNewFile()
+            }catch(Exception ignored){
+            }
+
+            if(pfile.exists()){
+                props.load(new FileInputStream(pfile))
+
+                String buildid = getBuildVersion()
+                println("Compiling with build: '$buildid'")
+
+                props["type"] = versionType
+                props["number"] = versionNumber
+                props["modifier"] = versionModifier
+                props["build"] = buildid
+
+                props.store(pfile.newWriter(), "Autogenerated file. Do not modify.")
+            }
+        }
+        writeProcessors = {
+            new File(rootDir, "annotations/src/main/resources/META-INF/services/").mkdirs()
+            def processorFile = new File(rootDir, "annotations/src/main/resources/META-INF/services/javax.annotation.processing.Processor")
+            def text = new StringBuilder()
+            def files = new File(rootDir, "annotations/src/main/java")
+            files.eachFileRecurse(groovy.io.FileType.FILES){ file ->
+                if(file.name.endsWith(".java") && (file.text.contains(" extends BaseProcessor") || (file.text.contains(" extends AbstractProcessor") && !file.text.contains("abstract class")))){
+                    text.append(file.path.substring(files.path.length() + 1)).append("\n")
+                }
+            }
+
+            processorFile.text = text.toString().replace(".java", "").replace("/", ".").replace("\\", ".")
         }
     }
-    apply plugin: 'maven-publish'
     repositories {
         mavenLocal()
         google()
@@ -85,13 +110,22 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url 'https://jitpack.io' }
-        jcenter()
     }
     tasks.withType(JavaCompile) {
-        targetCompatibility = 14
-        sourceCompatibility = 8
+        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
+            options.compilerArgs.addAll(['--release', '8'])
+        }
+    }
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
+
+        options.forkOptions.jvmArgs.addAll([
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+        ])
     }
 }
 
@@ -99,37 +133,130 @@ configure(project(":annotations")) {
     tasks.withType(JavaCompile) {
         targetCompatibility = 8
         sourceCompatibility = 8
+        options.fork = true
     }
 }
 
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")) {
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst {
-            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
+    tasks.withType(JavaCompile){
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
-    tasks.withType(Javadoc) {
-        options {
+    tasks.withType(Javadoc){
+        options{
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '8')
-            addStringOption('-source', '14')
+            addStringOption('-release', '16')
         }
     }
 }
 
-project(":annotations") {
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '14'])
+project(":core") {
+    apply plugin: "java-library"
+    apply plugin: "kotlin"
+    apply plugin: "kotlin-kapt"
+
+    kapt{
+        javacOptions{
+            option("-source", "16")
+            option("-target", "1.8")
         }
     }
+    compileJava.options.fork = true
+    task preGen {
+        outputs.upToDateWhen { false }
+        generateLocales()
+        writeVersion()
+        writeProcessors()
+    }
+    task copyChangelog {
+    }
+    task sourcesJar(type: Jar, dependsOn: classes){
+        archiveClassifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    task assetsJar(type: Jar, dependsOn: ":tools:pack"){
+        archiveClassifier = 'assets'
+        from files("assets"){
+            exclude "config", "cache", "music", "sounds"
+        }
+    }
+    artifacts{
+        archives sourcesJar
+        archives assetsJar
+    }
+    dependencies {
+        compileJava.dependsOn(preGen)
+
+        api "org.lz4:lz4-java:1.7.1"
+        api arcModule("arc-core")
+        api arcModule("extensions:flabel")
+        api arcModule("extensions:freetype")
+        api arcModule("extensions:g3d")
+        api arcModule("extensions:fx")
+        api arcModule("extensions:arcnet")
+//        compileOnly "com.github.Anuken.Mindustry:entities:$mindustryVersion"
+        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
+        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
+        implementation "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
+//        api "com.github.Anuken:rhino:$rhinoVersion"
+
+        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+        compileOnly project(":annotations")
+        kapt project(":annotations")
+//        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+
+    }
+    afterEvaluate{
+        task mergedJavadoc(type: Javadoc){
+            def blacklist = [/*project(":ios"), project(":desktop"), project(":server"),*/ project(":annotations")]
+            if(findProject(":android") != null){
+                blacklist += project(":android")
+            }
+
+            source rootProject.subprojects.collect{ project ->
+                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                    return project.sourceSets.main.allJava
+                }
+            }
+
+            classpath = files(rootProject.subprojects.collect { project ->
+                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                    return project.sourceSets.main.compileClasspath
+                }
+            })
+            destinationDir = new File(buildDir, 'javadoc')
+        }
+    }
+    jar {
+        exclude("gas/entities/comp/**")
+        exclude("gas/entities/compByAnuke/**")
+    }
+}
+
+project(":tools") {
+    apply plugin: "java"
+
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'commons-io:commons-io:2.5'
+
+        implementation project(":core")
+
+        implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.22.1'
+        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
+        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
+//        implementation arcModule("natives:natives-desktop")
+//        implementation arcModule("natives:natives-desktop")
+//        implementation arcModule("natives:natives-freetype-desktop")
+//        implementation arcModule("backends:backend-headless")
+//        implementation arcModule("extensions:packer")
+    }
+}
+project(":annotations") {
     apply plugin: 'maven-publish'
     repositories {
         mavenLocal()
@@ -151,149 +278,20 @@ project(":annotations") {
 //        implementation  project(":core")
 
         apply plugin: "java"
-        compile 'com.squareup:javapoet:1.12.1'
+        implementation 'com.squareup:javapoet:1.12.1'
 //        implementation "com.github.Anuken.Mindustry:entities:$mindustryVersion"
     }
 }
-configure(project(":core")) {
 
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8'])
-        }
-        sourceCompatibility = 8
-        targetCompatibility = 8
-        doFirst {
-//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
-    }
-
-    tasks.withType(Javadoc) {
-        options {
-//            addStringOption('Xdoclint:none', '-quiet')
-            addStringOption('-release', '8')
-        }
-    }
-
-}
-project(":core") {
-    apply plugin: "java-library"
-
-    compileJava.options.fork = true
-
-    task preGen {
-        outputs.upToDateWhen { false }
-//        generateLocales()
-//        writeVersion()
-//        writeProcessors()
-//        writePlugins()
-    }
-
-    task copyChangelog {
-    }
-
-    dependencies {
-        compileJava.dependsOn(preGen)
-
-        api "org.lz4:lz4-java:1.4.1"
-        implementation arcModule("arc-core")
-        implementation arcModule("extensions:freetype")
-        implementation arcModule("extensions:g3d")
-        implementation arcModule("extensions:fx")
-        implementation arcModule("extensions:arcnet")
-//        compileOnly "com.github.Anuken.Mindustry:entities:$mindustryVersion"
-        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
-        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-        implementation "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
-//        api "com.github.Anuken:rhino:$rhinoVersion"
-
-        compileOnly project(":annotations")
-        annotationProcessor project(":annotations")
-//        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
-
-    }
-
-    afterEvaluate {
-        task mergedJavadoc(type: Javadoc) {
-            if (true) return null;
-            def blacklist = [project(":annotations")]
-            if (findProject(":android") != null) {
-                blacklist += project(":android")
-            }
-
-            source rootProject.subprojects.collect { project ->
-                if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
-                    return project.sourceSets.main.allJava
-                }
-            }
-
-            classpath = files(rootProject.subprojects.collect { project ->
-                if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
-                    return project.sourceSets.main.compileClasspath
-                }
-            })
-            destinationDir = new File(buildDir, 'javadoc')
-        }
-    }
-    jar {
-        exclude("braindustry/entities/comp/**")
-        exclude("braindustry/entities/compByAnuke/**")
-    }
-}
-
-configure(project(":tools")) {
-
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '14'])
-        }
-
-        doFirst {
-//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
-    }
-    tasks.withType(Javadoc) {
-        options {
-//            addStringOption('Xdoclint:none', '-quiet')
-            addStringOption('-release', '14')
-        }
-    }
-}
-project(":tools") {
-    apply plugin: "java"
-    repositories {
-        mavenCentral()
-        maven { url 'https://www.jitpack.io' }
-    }
-    dependencies {
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation 'commons-io:commons-io:2.5'
-
-        implementation project(":core")
-
-        implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.22.1'
-        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
-        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-        compile arcModule("natives:natives-desktop")
-        compile arcModule("natives:natives-desktop")
-        compile arcModule("natives:natives-freetype-desktop")
-        compile arcModule("backends:backend-headless")
-        implementation arcModule(":extensions:packer")
-    }
-}configure([":core",":annotations",":tools"/*, ":desktop", ":server", ":tools"*/].collect{project(it)}){
+configure([":core", ":tools"].collect{project(it)}){
     java{
-//        withJavadocJar()
+        withJavadocJar()
         withSourcesJar()
     }
 
     publishing{
         publications{
             maven(MavenPublication){
-//                groupId="com.github.Zelaux.AdvancedContentInfo"
-//                artifactId="core"
-//                version="0.0.1"
                 from components.java
             }
         }
